2005-03-20  Nathaniel Smith  <njs@codesourcery.com>

	* schema.sql (db_vars): New table.
	* database.cc (database::database): Update schema id.
	* schema_migration.cc (migrate_client_to_vars): New function.
	(migrate_monotone_schema): Use it.
	* tests/t_migrate_schema.at: Another schema, another test...
	
	* vocab_terms.hh (var_domain, var_name, var_value): New types.
	* database.hh (get_vars, get_var, var_exists, set_var, clear_var):
	Prototype new functions.
	
2005-03-20  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi: Add some missing @sc{}'s.
	* cryptopp/config.h: Use "mt-stdint.h", not <stdint.h>, for
	portability.

2005-03-19  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile.am (EXTRA_DIST): Add UPGRADE and README.changesets.
	* debian/files: Auto-updated by dpkg-buildpackage.

	* This is the 0.17 release.
	
2005-03-18  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile.am (MOST_SOURCES): Add package_{full_,}revision.h.
	* NEWS: Fill in date.
	* debian/copyright: Update from AUTHORS.
	* configure.ac: Bump version number to 0.17.
	* debian/changelog, monotone.spec: Update for release.
	* po/monotone.pot: Auto-updated by distcheck.

2005-03-18  Christof Petig <christof@petig-baender.de>

	* sqlite/*: Imported sqlite version 3.1.6 tree

2005-03-18  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.1, commands.cc, Makefile.am: Fixup after merge.

2005-03-18  Nathaniel Smith  <njs@codesourcery.com>

	* path_component (split_path): Fix bug.
	Also, add unit tests for file.
	* unit_tests.{hh,cc}: Add path_component unit tests.
	
2005-03-18  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile.am: Fixup after merge.
	
2005-03-18  Nathaniel Smith  <njs@codesourcery.com>

	* change_set.cc: Move path_component stuff to...
	* path_component.{hh,cc}: ...these new files.
	* Makefile.am: Add them.

2005-03-18  Matt Johnston  <matt@ucc.asn.au>

	* txt2c.cc: add --no-static option
	* Makefile.am, package_revision.h, package_full_revision.h: