@@ -1,0 +1,26 @@
+AT_SETUP([vars])
+MONOTONE_SETUP
+
+# This tests not-yet-implemented functionality.
+AT_XFAIL_IF(true)
+
+AT_CHECK(MONOTONE set domain1 key1 orig_value, [], [ignore], [ignore])
+AT_CHECK(MONOTONE set domain1 key1 overwritten_value, [], [ignore], [ignore])
+AT_CHECK(MONOTONE set domain1 key2 other_value, [], [ignore], [ignore])
+AT_CHECK(MONOTONE set domain2 key1 other_domain_value, [], [ignore], [ignore])
+AT_CHECK(MONOTONE set domain2 key2 yet_another_value, [], [ignore], [ignore])
+AT_CHECK(MONOTONE unset domain2 key2)
+
+# FIXME: use a less lame output format
+AT_DATA(domain1_vars, [domain1: key1 overwritten_value
+domain1: key2 other_value
+])
+AT_DATA(domain2_vars, [domain2: key1 other_domain_value
+])
+AT_CHECK(cat domain1_vars domain2_vars > all_vars)
+
+AT_CHECK(MONOTONE ls vars, [], [all_vars], [ignore])
+AT_CHECK(MONOTONE ls vars domain1, [], [domain1_vars], [ignore])
+AT_CHECK(MONOTONE ls vars domain2, [], [domain1_vars], [ignore])
+
+AT_CLEANUP
