@@ -503,3 +503,4 @@ m4_include(tests/t_cat_file_by_name.at)
 m4_include(tests/t_epoch.at)
 m4_include(tests/t_epoch_server.at)
 m4_include(tests/t_epoch_unidirectional.at)
+m4_include(tests/t_vars.at)
